# parkpappa

./: .gitignore  README.md  flake.nix  package-lock.json  shell.nix
.github/workflows/: check-frontend.yml
backend/: .gitignore  Dockerfile  EmbedDisplayer.py  ParkApi.py  ParkDisplay.py  ParkLinks.json  ParkScraper.py  VästeråsStadScraper.py  abdulla.html  delete.py  deleteme.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
backend/app/: CoordinatesConverter.py  ParkApi.py  __init__.py
backend/app/templates/: index.html
backend/misc/: instascraper.py
backend/scrape/: scraper.py
frontend/: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  gen-icons.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts  service-worker.js
frontend/src/lib/: filterCategories.json  googleMapsLoader.ts  infoChipsTranslations.json  types.d.ts
frontend/src/lib/components/: GoogleButton.svelte  filterSettings.svelte.ts  global.d.ts  infoChips.svelte  map.svelte  parkInfo.svelte  parkRandomizer.svelte  parkReviewCard.svelte  randomFilterButton.svelte  shareToMap.svelte  starRating.svelte
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/addtohomescreen/: +page.server.ts  +page.svelte
frontend/src/routes/auth/: +page.server.ts  +page.svelte
frontend/src/routes/createreview/: +page.server.ts  +page.svelte
frontend/static/: manifest.json
frontend/static/blacklist/: streetviewblacklist.json
(+11 files in other folders)
