[project]
name = "parkpappa_backend"
version = "0.0.0-dev"
description = "The parkpappa park API using Flask"
authors = [
    { name = "David Lockley", email = "david.lockley@hitachigymnasiet.se" }
]


[project.dependencies]
Flask = ">=2.2.5"
requests = ">=2.32.0"
pyproj = "^3.4.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"